--- a/config/EnhancedInventories/main.cfg
+++ b/config/EnhancedInventories/main.cfg
@@ -28,6 +28,12 @@ crafting {
 }
 
 
+general {
+    # Used for additional debugging info, mainly for use by mod and pack devs [default: false]
+    B:DebugLogging=false
+}
+
+
 gui {
     # The maximum number of columns [range: 9 ~ 24, default: 12]
     I:MaxColomns=12
