--- a/config/GalaxySpace/biomes.conf
+++ b/config/GalaxySpace/biomes.conf
@@ -5,17 +5,26 @@ dimensions {
     I:IDACentauriBbBiome=218
     I:IDBarnarda2Biome=219
 
+    # ID Biome for Barnarda C (Flowers)
+    I:IDBarnardaCBiomeFlowers=227
+
     # ID Biome for Barnarda C (Hills)
     I:IDBarnardaCBiomeHills=220
 
     # ID Biome for Barnarda C (Low Plains)
     I:IDBarnardaCBiomeLowPlains=221
 
+    # ID Biome for Barnarda C (Oceans)
+    I:IDBarnardaCBiomeOceans=228
+
     # ID Biome for Barnarda C (Shores)
     I:IDBarnardaCBiomeShores=219
 
     # ID Biome for Barnarda E
     I:IDBarnardaEBiome=222
+
+    # ID Biome for Barnarda F
+    I:IDBarnardaFBiome=230
 
     # ID Biome for Callisto (Jupiter moon)
     I:IDCallistoBiome=223
@@ -80,6 +89,9 @@ dimensions {
 
     # ID Biome for Triton (Neptune moon)
     I:IDTritonBiome=217
+
+    # ID Biome for Vega B
+    I:IDVegaBBiome=231
 
     # ID Biome for Venus
     I:IDVenusBiome=202
