--- a/config/GalaxySpace/core.conf
+++ b/config/GalaxySpace/core.conf
@@ -25,6 +25,9 @@ general {
     # Enable/Disable Generation Ores on Planets/Moon (Global Config).
     B:enableOresGeneration=true
 
+    # Enable/Disable new Main Menu.
+    B:enableNewMenu=false
+
     #  /ONLYMOON or /ONLYMARS, /ONLYPHOBOS, /ONLYDEIMOS, /ONLYEUROPA, /ONLYIO, /ONLYENCELADUS, /ONLYVENUS, /ONLYMERCURY, /ONLYCERES if wanted on one planet only.
     S:"Other mods ores for GC to generate on GS planets" <
      >
