--- a/config/GalaxySpace/dimensions.conf
+++ b/config/GalaxySpace/dimensions.conf
@@ -36,8 +36,6 @@ dimensions {
 
     # Dimension ID for Io (Jupiter moon)
     I:dimensionIDIo=-5011
-
-    # Dimension ID for Jupiter
     I:dimensionIDJupiter=-5027
     I:dimensionIDJupiterOrbit=-5028
     I:dimensionIDJupiterOrbitStatic=-5029
@@ -55,6 +53,7 @@ dimensions {
     I:dimensionIDMarsOrbitStatic=-5015
 
     # Dimension ID for Mercury
+    I:dimensionIDMercury=-5030
     I:dimensionIDMerury=-5016
 
     # Dimension ID for Oberon (Uranus moon)
@@ -74,6 +73,9 @@ dimensions {
 
     # Dimension ID for Triton (Neptune moon)
     I:dimensionIDTriton=-5022
+
+    # Dimension ID for Vega B
+    I:dimensionIDVegaB=-32
 
     # Dimension ID for Venus
     I:dimensionIDVenus=-5023
@@ -158,6 +160,9 @@ general {
 
     # Enable/Disable Barnarda F
     B:enableBarnardaF=true
+
+    # Enable/Disable Vega B
+    B:enableVegaB=true
     B:enableJupiterSS=true
 }
 
