--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -10,7 +10,6 @@
 
 
 "control setup" {
-    B:"Advanced Pendants Apply Nether Effects"=true
     B:"Allow Danger in Rainbow Forests"=true
     B:"Allow duplication wand to copy TileEntities"=false
     B:"Always Respawn EnderDragon"=true
@@ -19,6 +18,7 @@
     I:"Cave Lighter Range"=128
     I:"Cave Lighter Zone Size"=8
     I:"Chest Generation Tier"=4
+    B:"Connected Crystalline Stone Textures"=false
     B:"Crystal Plants May Drop Shards"=true
     B:"Delete End on Unload"=false
     I:"Dimension Structure Difficulty"=3
