--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -1,11 +1,17 @@
 # Configuration file
 
 "control setup" {
+    B:"Admins Bypass Permissions"=true
+    B:"Attempt to Repair Environment Sanity"=false
+    B:"Check Environment Sanity"=false
+    B:"Compare mod file hashes between client and server"=true
     B:"Console Loading Info"=true
     B:"Custom/Donator Renders"=true
     B:"Debug Mode"=false
+    B:"Disable Hotbar Swapping"=false
     B:"Disable Renders For Debug"=false
     B:"Disallow Null-Item ItemStacks to Prevent Crashes"=true
+    B:"Enable Vernal Behavior"=true
     B:"Force Gregtech Ore Compatibility"=true
     B:"Increase sound channel count"=true
     B:"Log Loading Info To Separate File"=false
@@ -19,6 +25,7 @@
     B:"Slow Sync Packets - Only use this as a last resort"=false
     B:"Sort Creative Tabs Alphabetically"=true
     I:"Sync Packet ID"=182
+    B:"Use HashMap for Sound Categories - Only use if necessary"=false
 }
 
 
