--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -25,6 +25,7 @@
     I:PUPOISON=72006
     I:RECUSEBOOK=72000
     I:SCRAM=72014
+    I:THORIUMDUMP=72026
     I:UF6=72002
     I:WASTELEAK=72009
 }
