--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -57,6 +57,7 @@
     B:"Allow Nonstandard Recipe Modifications"=false
     B:"Allow RC steel to be used in other mods"=false
     B:"Allow TNT Cannon"=true
+    B:"Allow other mods' aluminum dust to make Silicon"=true
     B:"Allow special bedrock tool abilities in automation"=true
     B:"AutoCrafter Lag Profiling And Compensation"=true
     I:"Bait Box Range"=128
