--- a/config/ZombieAwareness/General.cfg
+++ b/config/ZombieAwareness/General.cfg
@@ -30,6 +30,8 @@
 
     # skips line of sight check on targetting [performance sensitive]
     B:seeThroughWalls=true
+
+    # Custom targetting sight range on top of vanilla sight based targetting
     I:sightRange=8
 
     # Random X Z variation of sound source placement
@@ -44,7 +46,7 @@
     # how frequently the mod iterates all players, effects rates, less is more frequent
     I:tickRatePlayerLoop=1
 
-    # currently unused
+    # Range of extra random speed to give a zombie for extra spawns and zombie duplications, eg: 0 = no boost, 1 = up to double speed
     I:zombieRandSpeedBoost=5
 }
 
