--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -56,11 +56,17 @@
     # Have Climate Control set the biomes for village generation; may be incompatible with village mods
     B:controlVillageBiomes=false
 
+    # Comma-delimited list of externalBiome Names. No quotes or line returnsYou will have to reload Minecraft after changing this.Names not in the list aren't removed from the configs but they have no effect
+    S:externalBiomeNames=
+
     # force small continent near origin
     B:forceStartContinent=true
 
     # max height value for allowing rivers; 10.0 allows everything; 0.75 is plains but no hills
     D:maxChasm=10.0
+
+    # Maximum Number of Rescue attempts. Negative numbers mean no limit
+    I:rescueLimit=-1
 
     # subbiomes not saved on edges, default 3, -1 deactivates saving sub-biomes
     I:subBiomeRingsNotSaved=-1
@@ -109,6 +115,9 @@
 
     # ignore climate zones altogether
     B:"Random Biomes"=false
+
+    # Width of banded climates (climate depends on latitude). 0 or less for normal rules. Width is in terms of climate zones, whatever they are
+    I:bandedClimateWidth=-1
 }
 
 
