--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -246,7 +246,7 @@ sound {
     # Number of streaming sound channels to configure in the sound system (manual) [range: 4 ~ 2147483647, default: 4]
     I:"Number Streaming Channels"=4
 
-    # Sounds to block from playing [default: ]
+    # Sounds to block from playing [default: [dsurround:bison]]
     S:"Blocked Sounds" <
      >
 
