--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -1,10 +1,37 @@
 # Configuration file
 
 ##########################################################################################################
-# building_settings
+# building
 #--------------------------------------------------------------------------------------------------------#
-# These settings allow to enable the usage of specific building parts
+# These values control any building aspect of the mod
 ##########################################################################################################
+
+building {
+    # Disable Barriers where Carpenter's Blocks may suffice. A lot of ID will be saved
+    B:EnableBarriers=true
+
+    # Disable Brick Carving where other mods may suffice. A lot of ID will be saved
+    B:EnableCarvedBricks=true
+
+    # Enable Modular glass panes
+    B:EnableModularPanes=true
+
+    # Allow to craft fence with the new recipe rather than the old one
+    B:EnableNewCraftingRecipes=true
+
+    # Allow to craft a set of clay, glass, wool and building parts with 16 new crafted dyes
+    B:EnableNewDyes=true
+
+    # Disable Plates where Forge Multipart may suffice. A lot of ID will be saved
+    B:EnablePlates=true
+
+    # Disable Modular Slabs where Carpenter's Blocks or Forge Multipart may suffice. A lot of ID will be saved
+    B:EnableSlabs=true
+
+    # Disable Stairs where Carpenter's Blocks may suffice. A lot of ID will be saved
+    B:EnableStairs=true
+}
+
 
 building_settings {
     B:enableExtraDyesBlocks=true
@@ -14,10 +41,55 @@ building_settings {
 
 
 ##########################################################################################################
-# chemistry_settings
+# chemistry
 #--------------------------------------------------------------------------------------------------------#
-# Enable CHEMISTRY, MINECRAWLING, OWC ENERGY and their related features
+# Enable Chemistry and related features
 ##########################################################################################################
+
+chemistry {
+    # Fluids cleand by Mine Crawlers will drop as a placeable item
+    B:DropFluidAsItem=true
+
+    # MAIN ENABLER. Enable Chemistry and its features
+    B:EnableChemistry=true
+
+    # Enable the chemical production of Glowstone
+    B:EnableGlowstone=true
+
+    # Enable the Mine Crawlers machines
+    B:EnableMineCrawlers=true
+
+    # Enable the OWC Energy system
+    B:EnableOwc=true
+
+    # Alloy Alloys in vanilla recipes
+    B:EnableVanillaAlloy=true
+
+    # Percentage of material required to produce one dust
+    I:ExtractingFactor=100
+
+    # Max amount of analyzed mineral shards from one mineral ore
+    I:MaxAnalyzedMinerals=4
+
+    # Max amount of prospectable minerals from one ore
+    I:MaxProspectedMinerals=3
+
+    # Frequency of mineral ore clouds
+    I:MineralFrequency=12
+
+    # Highest mineral level
+    I:MineralMaxLevel=220
+
+    # Biggest mineral cloud size
+    I:MineralMaxVeinSize=24
+
+    # Lowest mineral level
+    I:MineralMinLevel=20
+
+    # Smallest mineral cloud size
+    I:MineralMinVeinSize=10
+}
+
 
 chemistry_settings {
     I:aluminumSpawnFrequency=6
@@ -89,12 +161,6 @@ chemistry_settings {
 }
 
 
-##########################################################################################################
-# desert_settings
-#--------------------------------------------------------------------------------------------------------#
-# Enable DESERT FEATURES and sand related contents
-##########################################################################################################
-
 desert_settings {
     I:desertRoseRarity=35
     I:desertRoseSizeChance=3
@@ -108,10 +174,22 @@ desert_settings {
 
 
 ##########################################################################################################
-# fossils_settings
+# fossils
 #--------------------------------------------------------------------------------------------------------#
-# Enable FOSSIL WOODS and their related features
+# Enable Fossil Wood and related features
 ##########################################################################################################
+
+fossils {
+    # MAIN ENABLER. Enable the spawning of fossil woods in the world
+    B:enableFossilWood=true
+
+    # Size of the laying trunk
+    I:fossilWoodMaxSize=4
+
+    # General spawning rarity. The higher the rarer. Specific types could use divisions of it
+    I:fossilWoodRarity=30
+}
+
 
 fossils_settings {
     B:enableFossilWood=true
@@ -121,10 +199,46 @@ fossils_settings {
 
 
 ##########################################################################################################
-# gemology_settings
+# gemology
 #--------------------------------------------------------------------------------------------------------#
-# Enable GEMOLOGY, DIVINATION and their related features
+# Enable Gemology and related features
 ##########################################################################################################
+
+gemology {
+    # Chance for Caretaker grids to shed an animal drop
+    I:AnimalDropChance=6000
+
+    # Radius of the Explosion generated by the Cosmo Burner
+    I:CosmoRadius=12
+
+    # MAIN ENABLER. Enable Gemology and its features
+    B:EnableGemology=true
+
+    # Frequency of gem ore clouds
+    I:GemOresFrequency=6
+
+    # Biggest gem cloud size
+    I:GemOresMaxVeinSize=4
+
+    # Blocks above and under the effect of the grids
+    I:GridLevelSpan=4
+
+    # Required gems to infuse their essense
+    I:InfusingGems=16
+
+    # Max amount of prospectable shards from one ore
+    I:MaxProspectedShards=5
+
+    # Radius for Tier 1 grids on each direction
+    I:Tier1GridRadius=10
+
+    # Radius for Tier 2 grids on each direction
+    I:Tier2GridRadius=20
+
+    # Radius for Tier 3 grids on each direction
+    I:Tier3GridRadius=30
+}
+
 
 gemology_settings {
     B:enableAlexandrite=true
@@ -142,12 +256,6 @@ gemology_settings {
     I:pawnshopFeeMin=8
 }
 
-
-##########################################################################################################
-# machines_settings
-#--------------------------------------------------------------------------------------------------------#
-# These settings edit all the parameters related to the working of the mod machines
-##########################################################################################################
 
 machines_settings {
     B:enableCrawledFluidsDropAsItem=false
@@ -167,10 +275,37 @@ machines_settings {
 
 
 ##########################################################################################################
-# mining_settings
+# mining
 #--------------------------------------------------------------------------------------------------------#
-# These settings refer to events being fired where required while mining
+# These values control any mining aspect of the mod
 ##########################################################################################################
+
+mining {
+    # Allow to the rocks of the mod to spawn. They can be otherwise purchased in the Rock Vendor
+    B:AllowRocksSpawning=true
+
+    # Allow to spawn vanilla Andesite, Diorite and Granite
+    B:AllowVanillaRocks=true
+
+    # Chance to collect Amber Shards while mining stones. The higher the rarer
+    I:AmberDropRarity=20
+
+    # Base rarity of the extra drops occurrency
+    I:MiningDropsRarity=10
+
+    # The frequency at which clouds of each rock will spawn. The lower the rarer
+    I:RocksFrequency=8
+
+    # Highest size for a rock cloud
+    I:RocksMaxVeinSize=12
+
+    # Smallest size for a rock cloud
+    I:RocksMinVeinSize=4
+
+    # Chance to collect Miners Sweat while using work tools. The higher the rarer
+    I:SweatDropRarity=20
+}
+
 
 mining_settings {
     B:enableBonusOres=true
@@ -179,16 +314,94 @@ mining_settings {
 }
 
 
-##########################################################################################################
-# misc_settings
-#--------------------------------------------------------------------------------------------------------#
-# Miscellaneous features and their related settings
-##########################################################################################################
-
 misc_settings {
     B:enableTruffles=true
     I:truffleDiscoveryChance=6000
     B:trufflePigSoilGriefing=false
+}
+
+
+##########################################################################################################
+# mobs
+#--------------------------------------------------------------------------------------------------------#
+# These values are related to mobs parameters
+##########################################################################################################
+
+mobs {
+    # Id for the Guru villager
+    I:GuruVillagerID=200
+
+    # Id for theNovice villager
+    I:WildVillagerID=201
+}
+
+
+##########################################################################################################
+# mod_support
+#--------------------------------------------------------------------------------------------------------#
+# These values control any supported mod
+##########################################################################################################
+
+mod_support {
+    # Integration with Back In Slime's Slime Block
+    B:EnableBackInSlime=true
+
+    # Integration with Biome'O'Plenty rocks
+    B:EnableBoPRocks=true
+
+    # Integration with EtFuturum Vanilla rocks
+    B:EnableEtFuturunRocks=true
+
+    # Integration with Forge Microblocks
+    B:EnableForgeMultipart=true
+
+    # Integration with Harvestcraft water blocks and items
+    B:EnableHarvestcraftWater=true
+
+    # Integration with Pokeball coal in recipe
+    B:EnablePokeball=true
+
+    # Integration with Slime Dungeon's Slime Block
+    B:EnableSlimeDungeon=true
+
+    # Integration with Tubes coal in recipes
+    B:EnableTubes=true
+
+    # Integration with Underground Biome COnstruct
+    B:EnableUBC=true
+}
+
+
+##########################################################################################################
+# ore_tiers
+#--------------------------------------------------------------------------------------------------------#
+# These values set quality tiers for Coal and Iron ores
+##########################################################################################################
+
+ore_tiers {
+    # Frequency of coal ore clouds
+    I:CoalOresFrequency=8
+
+    # Biggest coal cloud size 
+    I:CoalOresMaxVeinSize=16
+
+    # Smallest coal cloud size
+    I:CoalOresMinVeinSize=4
+
+    # MAIN ENABLER. Enable Coal and Iron tiers
+    B:EnableOreTiers=true
+
+    # Frequency of Iron ore clouds
+    I:IronOresFrequency=8
+
+    # Biggest coal cloud size
+    I:IronOresMaxVeinSize=10
+
+    # Smallest coal cloud size
+    I:IronOresMinVeinSize=4
+
+    # This must be the same as Tubes config
+    I:TubesPlasticYeld=2
 }
 
 
@@ -302,12 +515,6 @@ rocks_gemstone {
 }
 
 
-##########################################################################################################
-# rocks_settings
-#--------------------------------------------------------------------------------------------------------#
-# These settings determine the spawning parameters of all the rocks of the mod
-##########################################################################################################
-
 rocks_settings {
     I:rocksFrequency=8
     I:rocksMaxVeinSize=12
@@ -316,10 +523,43 @@ rocks_settings {
 
 
 ##########################################################################################################
-# support_settings
+# sands
 #--------------------------------------------------------------------------------------------------------#
-# These settings refer to all mod support and integrations
+# Enable Beaches and sand related features
 ##########################################################################################################
+
+sands {
+    # Frequency at which extra beach patches will spawn in beach biomes. The lower the rarer
+    I:beachesFrequency=10
+
+    # Size of the beach patch
+    I:beachesMaxSize=32
+
+    # Rarity of the Desert Rose Formation. The higher the rarer
+    I:desertRoseRarity=40
+
+    # MAIN ENABLER. Enable the spawning of various beach types in the beach biome
+    B:enableBeaches=true
+
+    # Level of the sea, 63 is the default one
+    I:seaLevel=63
+}
+
+
+##########################################################################################################
+# structures
+#--------------------------------------------------------------------------------------------------------#
+# These values control any aspect of the structures in the mod
+##########################################################################################################
+
+structures {
+    # Rarity of the hut. The higher the rarer
+    I:GuruHutRarity=25
+
+    # Allow the hut to spawn in superflat worlds at double rarity
+    B:GuruHutSuperflatSpawn=true
+}
+
 
 support_settings {
     B:enableBoPRocksSupport=true
@@ -332,12 +572,6 @@ support_settings {
 }
 
 
-##########################################################################################################
-# ticking_settings
-#--------------------------------------------------------------------------------------------------------#
-# These settings edit the ticking speed for the mod features requiring time to perform
-##########################################################################################################
-
 ticking_settings {
     I:coolingDownSpeed=1500
     I:crawlingSpeed=10
@@ -346,12 +580,6 @@ ticking_settings {
     I:evaporationDownSpeed=1000
 }
 
-
-##########################################################################################################
-# tiers_settings
-#--------------------------------------------------------------------------------------------------------#
-# Enable ORE TIERS for Coal and Iron
-##########################################################################################################
 
 tiers_settings {
     I:TubesPlasticYeld=2
@@ -362,6 +590,102 @@ tiers_settings {
     I:ironOresFrequency=0
     I:ironOresMaxVeinSize=0
     I:ironOresMinVeinSize=0
+}
+
+
+##########################################################################################################
+# tools
+#--------------------------------------------------------------------------------------------------------#
+# These values set various parameters for the mod tools, machines and devices
+##########################################################################################################
+
+tools {
+    # Make all the utility devices craftable. Otherwise lootable from the Guru's Hut
+    B:CraftableDevices=true
+
+    # Amount of copal required to purchase a rock from the vending system
+    I:FeeRockVending=8
+
+    # Wheter placed fluids have potion effect
+    B:FluidsPotionEffect=true
+
+    # Processing speed of the Brick Carver
+    I:SpeedBrickCarver=150
+
+    # Processing speed of the Chemical Extractor
+    I:SpeedChemicalExtractor=400
+
+    # Processing speed of the Cutting Station
+    I:SpeedCuttingStation=200
+
+    # Processing speed of the Gem Polisher
+    I:SpeedGemPolisher=100
+
+    # Processing speed of the Item Divinator
+    I:SpeedItemDivinator=200
+
+    # Processing speed of the Lab Oven
+    I:SpeedLabOven=200
+
+    # Processing speed of the Mineral Analyzer
+    I:SpeedMineralAnalyzer=400
+
+    # Processing speed of the Rock Prospector
+    I:SpeedRockProspector=300
+
+    # Cooling speed for temperature based features
+    I:TimeCooling=1500
+
+    # Digging speed for Mine Crawlers
+    I:TimeDigging=10
+
+    # Drying speed for state based features
+    I:TimeDrying=1500
+
+    # Evaporation speed for temperature based features
+    I:TimeEvaporation=2500
+
+    # Growing speed for Crystal Blocks
+    I:TimeGrowth=1500
+
+    # Max uses for the Abrasive Lap
+    I:UsesAbrasivLap=150
+
+    # Max uses for the Carving Burr
+    I:UsesCarvingBurr=200
+
+    # Max uses for the Cutting Blade
+    I:UsesCuttingBlade=300
+
+    # Max uses for the Iron Wedge
+    I:UsesIronWedge=300
+
+    # Max uses for the Test Tube
+    I:UsesTestTube=100
+
+    # Max uses for the mod wrench
+    I:UsesWrench=1000
+}
+
+
+##########################################################################################################
+# truffles
+#--------------------------------------------------------------------------------------------------------#
+# Enable Truffle and related features
+##########################################################################################################
+
+truffles {
+    # Allow pigs to grief the block where they find a truffle
+    B:AllowPigGriefing=false
+
+    # How many ticks an auction will last. 6000+ may cause the item to despawn
+    I:AuctionInterval=3000
+
+    # MAIN ENABLER. Enable the finding of truffles and their related features
+    B:EnableTruffles=true
+
+    # Chance for a pig to find a truffle. The higher the rarer
+    I:TruffleRarity=16000
 }
 
 
