--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -143,6 +143,9 @@ general {
     # The amount of RF that equal 1 EU. 4 by default, so 4RF == 1EU and .25EU == 1RF
     I:"EU Conversion"=4
 
+    # Set this to false to prevent the engineer's village house from being generated
+    B:"Enable Village House"=true
+
     # Set this to false to prevent wires from outputting GregTech EU
     B:"GregTech Compatability"=true
 
@@ -170,6 +173,12 @@ general {
         RotaryCraft
         ElectriCraft
         ReactorCraft
+     >
+
+    # A list entity class names that can not drop shader bags. This is necessary because some developers use the IBossDisplayData interface on entities that aren't actually bosses.
+    S:"Shaderbag Blacklist" <
+        entitynpc
+        entitycustomnpc
      >
 
     # Set this to false to hide the update news in the manual
