--- a/config/Practical-Logistics/Main-Config.cfg
+++ b/config/Practical-Logistics/Main-Config.cfg
@@ -3,6 +3,9 @@
 settings {
     # Sapphire Ore [default: true]
     B:"Generate Ore"=false
+
+    # Display Mana Percentage [default: false]
+    B:Mana=false
 }
 
 
