--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -176,6 +176,12 @@ appliedenergistics2 {
 }
 
 
+architecturecraft {
+    B:sawbench=false
+    B:shape=false
+}
+
+
 automagy {
     B:blockAmnesiac=false
     B:blockBoiler=false
