--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -58,15 +58,23 @@ ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
     I:OreExists...=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsAluminum=0
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=0
 
     #  [range: 0 ~ 2, default: 1]
@@ -80,6 +88,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=0
 
     #  [range: 0 ~ 2, default: 1]
