--- a/config/lootablebodies.cfg
+++ b/config/lootablebodies.cfg
@@ -40,10 +40,10 @@
     # not decay if there are any items on the corpse). If using this 
     # option, you will probably want to also disable the 
     # add_bones_to_corpse option. [default: false]
-    B:empty_only_decay=false
+    B:empty_only_decay=true
 
     # If true, corpses will self-destruct after a preiod of time. [default: false]
-    B:enable_corpse_decay=false
+    B:enable_corpse_decay=true
 }
 
 
