--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -8,6 +8,7 @@ additional {
         Cricket
         Centipede
         Moth
+        Shark
      >
 
     # Should player inventories be stored after death (can be later restored with ob_inventory command)
