--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -380,22 +380,22 @@ mod_support {
 
 ore_tiers {
     # Frequency of coal ore clouds
-    I:CoalOresFrequency=1
+    I:CoalOresFrequency=0
 
     # Biggest coal cloud size 
-    I:CoalOresMaxVeinSize=32
+    I:CoalOresMaxVeinSize=16
 
     # Smallest coal cloud size
     I:CoalOresMinVeinSize=4
 
     # MAIN ENABLER. Enable Coal and Iron tiers
-    B:EnableOreTiers=true
+    B:EnableOreTiers=false
 
     # Frequency of Iron ore clouds
-    I:IronOresFrequency=1
+    I:IronOresFrequency=0
 
     # Biggest coal cloud size
-    I:IronOresMaxVeinSize=16
+    I:IronOresMaxVeinSize=12
 
     # Smallest coal cloud size
     I:IronOresMinVeinSize=4
