--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -163,14 +163,30 @@ appliedenergistics2 {
     B:tileBlockTinyTNT=false
     B:tileBlockVibrationChamber=false
     B:tileBlockWireless=false
+    B:tileChiseledQuartzSlabBlock=false
+    B:tileChiseledQuartzSlabBlockdouble=true
     B:tileChiseledQuartzStairBlock=false
+    B:tileFluixSlabBlock=false
+    B:tileFluixSlabBlockdouble=true
     B:tileFluixStairBlock=false
     B:tileOreQuartz=false
     B:tileOreQuartzCharged=false
+    B:tileQuartzPillarSlabBlock=false
+    B:tileQuartzPillarSlabBlockdouble=true
     B:tileQuartzPillarStairBlock=false
+    B:tileQuartzSlabBlock=false
+    B:tileQuartzSlabBlockdouble=true
     B:tileQuartzStairBlock=false
+    B:tileSkyStoneBlockSlabBlock=false
+    B:tileSkyStoneBlockSlabBlockdouble=true
     B:tileSkyStoneBlockStairBlock=false
+    B:tileSkyStoneBrickSlabBlock=false
+    B:tileSkyStoneBrickSlabBlockdouble=true
     B:tileSkyStoneBrickStairBlock=false
+    B:tileSkyStoneSlabBlock=false
+    B:tileSkyStoneSlabBlockdouble=true
+    B:tileSkyStoneSmallBrickSlabBlock=false
+    B:tileSkyStoneSmallBrickSlabBlockdouble=true
     B:tileSkyStoneSmallBrickStairBlock=false
     B:tileSkyStoneStairBlock=false
 }
@@ -6721,6 +6737,10 @@ gardentrees {
     B:thinlog.13060=false
     B:thinlog.13061=false
     B:thinlog.13062=false
+    B:thinlog.13074=false
+    B:thinlog.13075=false
+    B:thinlog.13076=false
+    B:thinlog.13077=false
     B:thinlog.13114=false
     B:thinlog.13115=false
     B:thinlog.13116=false
@@ -6913,7 +6933,9 @@ gardentrees {
     B:thinlog.4869=false
     B:thinlog.4870=false
     B:thinlog.4881=false
+    B:thinlog.4882=false
     B:thinlog.4883=false
+    B:thinlog.4884=false
     B:thinlog.4885=false
     B:thinlog.4922=false
     B:thinlog.4923=false
@@ -7072,7 +7094,9 @@ gardentrees {
     B:thinlog.773=false
     B:thinlog.774=false
     B:thinlog.785=false
+    B:thinlog.786=false
     B:thinlog.787=false
+    B:thinlog.788=false
     B:thinlog.789=false
     B:thinlog.826=false
     B:thinlog.827=false
@@ -7138,6 +7162,10 @@ gardentrees {
     B:thinlog.8964=false
     B:thinlog.8965=false
     B:thinlog.8966=false
+    B:thinlog.8978=false
+    B:thinlog.8979=false
+    B:thinlog.8980=false
+    B:thinlog.8981=false
     B:thinlog.9018=false
     B:thinlog.9019=false
     B:thinlog.9020=false
@@ -7372,6 +7400,10 @@ gardentrees {
     B:thinlogfence.13060=false
     B:thinlogfence.13061=false
     B:thinlogfence.13062=false
+    B:thinlogfence.13074=false
+    B:thinlogfence.13075=false
+    B:thinlogfence.13076=false
+    B:thinlogfence.13077=false
     B:thinlogfence.13114=false
     B:thinlogfence.13115=false
     B:thinlogfence.13116=false
@@ -7564,7 +7596,9 @@ gardentrees {
     B:thinlogfence.4869=false
     B:thinlogfence.4870=false
     B:thinlogfence.4881=false
+    B:thinlogfence.4882=false
     B:thinlogfence.4883=false
+    B:thinlogfence.4884=false
     B:thinlogfence.4885=false
     B:thinlogfence.4922=false
     B:thinlogfence.4923=false
@@ -7723,7 +7757,9 @@ gardentrees {
     B:thinlogfence.773=false
     B:thinlogfence.774=false
     B:thinlogfence.785=false
+    B:thinlogfence.786=false
     B:thinlogfence.787=false
+    B:thinlogfence.788=false
     B:thinlogfence.789=false
     B:thinlogfence.826=false
     B:thinlogfence.827=false
@@ -7789,6 +7825,10 @@ gardentrees {
     B:thinlogfence.8964=false
     B:thinlogfence.8965=false
     B:thinlogfence.8966=false
+    B:thinlogfence.8978=false
+    B:thinlogfence.8979=false
+    B:thinlogfence.8980=false
+    B:thinlogfence.8981=false
     B:thinlogfence.9018=false
     B:thinlogfence.9019=false
     B:thinlogfence.9020=false
@@ -22466,6 +22506,7 @@ thaumcraft {
 
 thaumicenergistics {
     B:thaumicenergisticsblockarcaneassembler=false
+    B:thaumicenergisticsblockdistillationencoder=false
     B:thaumicenergisticsblockessentiacellworkbench=false
     B:thaumicenergisticsblockessentiaprovider=false
     B:thaumicenergisticsblockessentiavibrationchamber=false
