--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -140,6 +140,7 @@ features {
         B:CraftingTerminal=true
         B:ExportBus=true
         B:FormationPlane=true
+        B:IdentityAnnihilationPlane=true
         B:ImportBus=true
         B:LevelEmitter=true
         B:P2PTunnel=true
@@ -175,6 +176,8 @@ features {
         B:P2PTunnelLiquids=true
         B:P2PTunnelME=true
         B:P2PTunnelMJ=true
+        B:P2PTunnelOpenComputers=true
+        B:P2PTunnelPressure=true
         B:P2PTunnelRF=true
         B:P2PTunnelRedstone=true
     }
@@ -196,6 +199,7 @@ features {
         B:Achievements=true
         B:CraftingLog=false
         B:Creative=true
+        B:DebugLogging=false
         B:GrinderLogging=false
         B:IntegrationLogging=false
         B:LightDetector=true
@@ -209,6 +213,11 @@ features {
 
     crafting {
         B:CustomRecipes=false
+        B:EnableDisassemblyCrafting=true
+        B:EnableFacadeCrafting=true
+        B:InWorldFluix=true
+        B:InWorldPurification=true
+        B:InWorldSingularity=true
         B:InterfaceTerminal=true
         B:enableDisassemblyCrafting=true
         B:enableFacadeCrafting=true
@@ -246,6 +255,9 @@ modintegration {
     S:BuildCraft=AUTO
     S:BuildCraft5Power=AUTO
     S:BuildCraft6Power=AUTO
+    S:BuildCraftBuilders=AUTO
+    S:BuildCraftCore=AUTO
+    S:BuildCraftTransport=AUTO
     S:ColoredLightsCore=AUTO
     S:CraftGuide=AUTO
     S:DeepStorageUnit=AUTO
@@ -257,6 +269,8 @@ modintegration {
     S:Mekanism=AUTO
     S:MineFactoryReloaded=AUTO
     S:NotEnoughItems=AUTO
+    S:OpenComputers=AUTO
+    S:PneumaticCraft=AUTO
     S:Railcraft=AUTO
     S:RedstoneFluxPower-Items=AUTO
     S:RedstoneFluxPower-Tiles=AUTO
@@ -296,7 +310,7 @@ powerratios {
     D:IC2=2.0
     D:Mekanism=0.2
     D:RotaryCraft=8.884150675195451E-4
-    D:ThermalExpansion=0.5
+    D:ThermalExpansion=0.125
     D:UsageMultiplier=4.0
 }
 
@@ -336,6 +350,10 @@ tickrates {
     I:METunnel.min=5
     I:MJTunnel.max=20
     I:MJTunnel.min=1
+    I:OpenComputersTunnel.max=5
+    I:OpenComputersTunnel.min=1
+    I:PressureTunnel.max=120
+    I:PressureTunnel.min=1
     I:StorageBus.max=60
     I:StorageBus.min=5
     I:VibrationChamber.max=40
