--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -68,6 +68,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=0
     I:OreExistsNickel=0
 
@@ -80,6 +82,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=0
 
     #  [range: 0 ~ 2, default: 1]
